stop path css animation when out of the viewport

--- a/src/pages/components/first-screen/components/content.module.scss
+++ b/src/pages/components/first-screen/components/content.module.scss
@@ -94,7 +94,9 @@
 .actionsWrapper {
   @include fade-in(0.8s, 8s);
   transform: translateY(20px);
-  animation: fadeIn 0.8s 8s forwards, slideUp 0.8s 8s forwards;
+  animation:
+    fadeIn 0.8s 8s forwards,
+    slideUp 0.8s 8s forwards;
 }
 
 @keyframes slideUp {
